--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ img {
 .secondary-button {
     background-color: #fefcfb;
     color: #3e7967;
-    border: 2px solid ##3e7967;
+    border: 2px solid #3e7967;
 }
 
 .button:hover {
