--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+/*Layout Styling*/
+* {
+    box-sizing: border-box;
+}
+
+.container {
+    padding: 0 16px; /*left and right padding*/
+}
+
 body {
     background-color: #fefcfb;
     font-family: 'Source Sans 3', sans-serif;
