--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@
     padding: 0 16px; /*left and right padding*/
 }
 
+.row{
+    margin: 32px 0;
+}
+
 body {
     background-color: #fefcfb;
     font-family: 'Source Sans 3', sans-serif;
@@ -26,16 +30,18 @@ img {
 }
 
 /*ids selectors for each section in my website*/
-#hero {
+#hero h1{
+    text-align: center;
     color: #2a3d45;
 }
 
-#myProjects {
-    color: #fefcfb;
+#projects .row {
+    padding-bottom: 24px;
+    border-bottom: 2px solid #4a4a4a;
 }
 
 #contact {
-    color: #fefcfb;
+    color: #2a3d45;
 }
 
 
@@ -70,6 +76,22 @@ img {
     text-decoration: none;
 }
 
+/*Style the social icons*/
+.social {
+    list-style-type: none;
+    padding: 0;
+    margin-left: -10px;
+  }
+  .social li {
+    display: inline-block;
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+  .social img {
+    height: 32px;
+    width: 32px;
+  }
+
 /*hyperlinks*/
 .header-link {
     color:#fefcfb;
@@ -81,20 +103,3 @@ a {
     text-decoration: none; /*no underline*/
 }
 
-/*Style the social icons*/
-.social {
-    list-style-type: none;
-    padding: 0;
-    margin-left: -10px;
-  }
-  ​
-  .social li {
-    display: inline-block;
-    margin-top: 10px;
-    margin-left: 10px;
-  }
-  ​
-  .social img {
-    height: 32px;
-    width: 32px;
-  }
