--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ img {
     padding: 16px 0;
     display: inline-block;
     width: 100%;
+    text-align: center;
 }
 
 #projects .row {
@@ -157,29 +158,47 @@ a {
 }
 
 /*Media Queries*/
+[class*="col-"] {
+    float:left;
+    padding: 0 16px;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
 /*Medium Devices*/
 @media only screen and (min-width: 640px) {
-header {
-    text-align: unset;
-    font-size: 18px;
-}
+    header {
+        text-align: unset;
+        font-size: 18px;
+        padding: 24px 0 16px;
+    }
 
-header a{
-    display: inline-block;
-}
+    header a{
+        display: inline-block;
+    }
 
-nav {
-    width: auto;
-    float: right;
-};
+    nav {
+        width: auto;
+        float: right;
+        margin-top: 4px;
+    };
 
-main {
-    padding-top: 80px;
-}
-}
+    main {
+        padding-top: 80px;
+    }
 
-.col-md-6 {
-    width: 50%;
+    .col-md-6 {
+        width: 50%;
+    }
+
+    #hero span{
+        display: block;
+        font-size: 18px;
+    }
+
 }
 
 /*Large Devices (1024px or larger)*/
@@ -191,4 +210,6 @@ main {
 @media only screen and (min-width: 1440px) {
 
 }
+
+
 
