--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,8 @@
 
 /*Header and Body Styling*/
 header {
-    background-color:#3e7967;
-    color:#fefcfb;
+    background-color:#36558f;
+    color:#FDFDFF;
     text-align: center;
     padding: 12px 0;
     position: fixed;
@@ -23,12 +23,12 @@ header {
 }
 
 body {
-    background-color: #fefcfb;
+    background-color: #FDFDFF;
     font-family: 'Source Sans 3', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.6;
-    color: #2a3d45
+    color: #171A21
 }
 
 main {
@@ -41,7 +41,7 @@ img {
 
 /*ids selectors for each section in my website*/
 #hero {
-    background-color: #3e7967;
+    background-color: #36558f;
     color: #fefcfb;
     padding: 16px 0;
     display: inline-block;
@@ -73,11 +73,17 @@ img {
 }
 
 /*Navigation Styling*/
-header a {
+.header-title {
     padding: 0 16px;
     text-transform: uppercase;
     font-weight: 700;
     display: inline-block;
+    color:#FDFDFF;
+}
+
+.header-link {
+    color:#FDFDFF;
+    text-decoration: none;
 }
 
 nav > ul {
@@ -100,6 +106,49 @@ nav > ul > li > a:visited {
 }
 
 /*buttons*/
+
+/* CSS */
+.button-21 {
+  align-items: center;
+  appearance: none;
+  background-color: #3e7967;
+  background-image: linear-gradient(1deg, #001c24, #00ff9e 99%);
+  background-size: calc(100% + 20px) calc(100% + 20px);
+  border-radius: 100px;
+  border-width: 0;
+  box-shadow: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1rem;
+  height: auto;
+  justify-content: center;
+  line-height: 1.5;
+  padding: 6px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color .2s,background-position .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: top;
+  white-space: nowrap;
+}
+
+.button-21:active,
+.button-21:focus {
+  outline: none;
+}
+
+.button-21:hover {
+  background-position: -20px -20px;
+}
+
+.button-21:focus:not(:active) {
+  box-shadow: rgba(40, 170, 255, 0.25) 0 0 0 .125em;
+}
+
 .button {
     display: inline-block;
     border: none;
@@ -147,13 +196,9 @@ nav > ul > li > a:visited {
   }
 
 /*hyperlinks*/
-.header-link {
-    color:#fefcfb;
-    text-decoration: none;
-}
 
 a {
-    color:#3e7967;
+    color:#36558f;
     text-decoration: none; /*no underline*/
 }
 
@@ -174,10 +219,6 @@ a {
         text-align: unset;
         font-size: 18px;
         padding: 24px 0 16px;
-    }
-
-    header a{
-        display: inline-block;
     }
 
     nav {
@@ -203,6 +244,13 @@ a {
 
 /*Large Devices (1024px or larger)*/
 @media only screen and (min-width: 1024px) {
+    .col-lg-7 {
+        width: 60%;
+    }
+
+    .col-lg-5 {
+        width: 40%;
+    }
 
 }
 
