--- a/css/styles.css
+++ b/css/styles.css
@@ -3,25 +3,8 @@
     box-sizing: border-box;
 }
 
-.container {
-    padding: 0 16px; /*left and right padding*/
-}
-
-.row{
-    margin: 32px 0;
-}
-
-/*Header and Body Styling*/
-header {
-    background-color:#36558f;
-    color:#FDFDFF;
-    text-align: center;
-    padding: 12px 0;
-    position: fixed;
-    width: 100%;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-}
-
+/*Default Body Section*/
+/*Start*/
 body {
     background-color: #FDFDFF;
     font-family: 'Source Sans 3', sans-serif;
@@ -29,6 +12,33 @@ body {
     font-weight: 400;
     line-height: 1.6;
     color: #171A21
+}
+
+h1, h2, h3, h4 {
+    line-height: 1.4;
+}
+
+h1 {
+    font-size: 2.75em;
+    font-weight: 700;
+}
+
+h2 {
+    font-size: 2.25em;
+    font-weight: 700;
+}
+
+h3 {
+    font-size: 2.25 em;
+    font-weight: 400;
+    margin-top: -8px;
+}
+    
+#about-page h3 {margin-top: 0;}
+
+h4 {
+    font-size: 1.35em;
+    font-weight: 400;
 }
 
 main {
@@ -39,54 +49,155 @@ img {
     width: 100%;
 }
 
-/*ids selectors for each section in my website*/
-#hero {
-    background-color: #36558f;
+/*Changing the default link color in navigation*/
+a {
     color: #FDFDFF;
-    padding: 16px 0;
-    display: inline-block;
-    width: 100%;
-    text-align: center;
+    text-decoration: none; /* No underlining */
 }
 
-#projects .row {
-    padding-bottom: 24px;
-    border-bottom: 2px solid #4a4a4a;
-}
-
-#skills h3{
-    margin: 4px;
-}
-
-#skills ul{
-    margin-top: 4px;
-    margin-bottom: 16px;
-}
-
-#contact {
-    color: #2a3d45;
-}
-
-/*Text Styling*/
-.center {
-    text-align: center;
-}
-
-/*Navigation Styling*/
-.header-title {
-    padding: 0 16px;
-    text-transform: uppercase;
-    font-weight: 700;
-    display: inline-block;
-    color:#FDFDFF;
-}
-
-.header-link {
-    color:#FDFDFF;
+a:hover {
+    opacity: 60%;
     text-decoration: none;
 }
 
-/* Pull up  */
+/*Style the current nav item*/
+.active a {
+    color:#E08E45;
+    text-decoration: underline;
+}
+
+a:active {
+    color:#E08E45;
+}
+
+/*Pseudo class for Accessibility for Across the Web*/
+a:hover, a:focus {
+    color:#E08E45;
+    text-decoration: none;
+}
+
+/*buttons*/
+
+/* CSS */
+.primary-button {
+    align-items: center;
+    appearance: none;
+    background-color: #36558f;
+    background-size: calc(100% + 20px) calc(100% + 20px);
+    border-radius: 100px;
+    border-width: 0;
+    box-shadow: none;
+    box-sizing: border-box;
+    color: #FDFDFF;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1rem;
+    height: auto;
+    justify-content: center;
+    line-height: 1.5;
+    padding: 8px 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: opacity .2s,background-position .2s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: top;
+    white-space: nowrap;
+  }
+  
+  .primary-button:active,
+  .primary-button:focus {
+    outline: none;
+    opacity: 0.8;
+    text-decoration: none;
+  }
+  
+  .primary-button:hover {
+      opacity: 80%;
+      color:#FDFDFF;
+      background-color: #36558f;
+    background-position: -20px -20px;
+  }
+  
+  .primary-button:focus:not(:active) {
+    box-shadow: rgba(40, 170, 255, 0.25) 0 0 0 .125em;
+  }
+  
+  .secondary-button {
+      align-items: center;
+      appearance: none;
+      background-color: #FDFDFF;
+      background-size: calc(100% + 20px) calc(100% + 20px);
+      border-radius: 100px;
+      border-width: 0;
+      box-shadow: none;
+      box-sizing: border-box;
+      color: #36558f;
+      cursor: pointer;
+      display: inline-block;
+      font-size: 1rem;
+      height: auto;
+      justify-content: center;
+      line-height: 1.5;
+      padding: 8px 24px;
+      text-align: center;
+      text-decoration: none;
+      transition: background-color .2s,background-position .2s;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+      vertical-align: top;
+      white-space: nowrap;
+      border: 2px solid #36558f;
+  }
+  
+  /*button rules for the mailto button*/
+  .button.contact {
+      background-color: transparent;
+      color:#36558f;
+      text-transform: uppercase;
+      border: 2px solid #36558f;
+      transition: 0.8s opacity;
+      padding: 8px;
+  }
+  
+  .button.contact:hover{
+      opacity: 0.8;
+      background-color: #36558f;
+      color:#FDFDFF;
+  }
+  
+  .button.contact:active {
+      opacity: 0.8;
+      background-color: #E08E45;
+      color: #FDFDFF;
+  }
+
+/*End of Default Body Section*/
+
+/*Style the page section*/
+/*Header*/
+header {
+    background-color:#36558f;
+    color:#FDFDFF;
+    text-align: center;
+    padding: 12px 0;
+    position: fixed;
+    width: 100%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+header .logo {
+    max-width: 48px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+/*Navigation Styling*/
+nav {
+    display: inline-block;
+}
 
 nav > ul {
     list-style-type: none;
@@ -103,96 +214,67 @@ nav > ul > li > a {
     font-weight: 700;
 }
 
-nav > ul > li > a::before
-{
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    left: 0px;
-    bottom: 0px;
-    content: '';
-    background: #FFF;
-    opacity: 0.3;
-    transition: all 0.3s;
-}
-
-nav > ul > li > a:hover::before
-{
-    height: 100%;
-}
-
-
-/*buttons*/
-
-/* CSS */
-.primary-button {
-  align-items: center;
-  appearance: none;
-  background-color: #36558f;
-  background-size: calc(100% + 20px) calc(100% + 20px);
-  border-radius: 100px;
-  border-width: 0;
-  box-shadow: none;
-  box-sizing: border-box;
-  color: #FDFDFF;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 1rem;
-  height: auto;
-  justify-content: center;
-  line-height: 1.5;
-  padding: 8px 24px;
-  text-align: center;
-  text-decoration: none;
-  transition: opacity .2s,background-position .2s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: top;
-  white-space: nowrap;
-}
-
-.primary-button:active,
-.primary-button:focus {
-  outline: none;
-}
-
-.primary-button:hover {
-    opacity: 80%;
-  background-position: -20px -20px;
-}
-
-.primary-button:focus:not(:active) {
-  box-shadow: rgba(40, 170, 255, 0.25) 0 0 0 .125em;
-}
-
-.secondary-button {
-    align-items: center;
-    appearance: none;
-    background-color: #FDFDFF;
-    background-size: calc(100% + 20px) calc(100% + 20px);
-    border-radius: 100px;
-    border-width: 0;
-    box-shadow: none;
-    box-sizing: border-box;
-    color: #36558f;
-    cursor: pointer;
+#hero {
+    background-color: #36558f;
+    color: #FDFDFF;
+    padding: 40px 0;
     display: inline-block;
-    font-size: 1rem;
-    height: auto;
-    justify-content: center;
-    line-height: 1.5;
-    padding: 8px 24px;
-    text-align: center;
-    text-decoration: none;
-    transition: background-color .2s,background-position .2s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    vertical-align: top;
-    white-space: nowrap;
-    border: 2px solid #36558f;
+    width: 100%;
 }
+
+#hero span {
+    display: block;
+}
+
+#contact {
+    background-color: #f2f2f2;
+    color: #171A21;
+    padding: 24px;
+}
+
+#contact a{
+    color:#36558f;
+}
+
+/*Style the social icons*/
+.social {
+    list-style-type: none;
+    padding: 0;
+    margin-left: -10px;
+}
+
+.social li {
+    display: inline-block;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.social img {
+    height: 32px;
+    width: 32px;
+}
+/*End of page section styles*/
+
+/*Layout Styling Start*/
+.container {
+    padding: 0 16px; /*left and right padding*/
+}
+
+.row{
+    margin: 32px 0;
+}
+
+#projects .row {
+    padding-bottom: 24px;
+    border-bottom: 2px solid #4a4a4a;
+}
+/*End of Layout Styling*/
+
+/*Text Styling*/
+.center {
+    text-align: center;
+}
+
 
 /*CSS Animation*/
 .berlin-illustration {
@@ -233,78 +315,73 @@ nav > ul > li > a:hover::before
     animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
-/*Style the social icons*/
-.social {
-    list-style-type: none;
-    padding: 0;
-    margin-left: -10px;
-  }
-  .social li {
-    display: inline-block;
-    margin-top: 10px;
-    margin-left: 10px;
-  }
-  .social img {
-    height: 32px;
-    width: 32px;
-  }
 
-/*hyperlinks*/
-
-a {
-    color:#36558f;
-    text-decoration: none; /*no underline*/
-}
 
 /*Media Queries*/
-[class*="col-"] {
-    float:left;
-    padding: 0 16px;
-}
-
+/*clear page flow*/
 .row::after {
     content: "";
     clear: both;
     display: table;
 }
+
+/**float all columns to the left*/
+[class*="col-"] {
+    float:left;
+    padding: 16px;
+}
+
 /*Medium Devices*/
 @media only screen and (min-width: 640px) {
+    body {
+        font-size: 18px;
+    }
+    
     header {
         text-align: unset;
-        font-size: 18px;
         padding: 24px 0 16px;
     }
 
     nav {
         width: auto;
         float: right;
-        margin-top: 4px;
     };
-
-    main {
-        padding-top: 80px;
-    }
 
     .col-md-6 {
         width: 50%;
-    }
-
-    #hero span{
-        display: block;
-        font-size: 18px;
+        float: left;
+        padding-bottom: 40px;
     }
 
 }
 
 /*Large Devices (1024px or larger)*/
 @media only screen and (min-width: 1024px) {
-    .col-lg-7 {
-        width: 60%;
+    .container {
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
     }
-
+    
     .col-lg-5 {
         width: 40%;
     }
+
+    .col-lg-7 {
+        width: 60%;
+        float: left;
+        padding-bottom: 40px;
+    }
+
+    .col-lg-8 {
+        width: 40%;
+        float: right;
+    }
+
+    #about-page .col-md-6{
+        width: 100%
+    }
+
 
 }
 
