--- a/css/styles.css
+++ b/css/styles.css
@@ -158,9 +158,11 @@ a:hover, a:focus {
       background-color: transparent;
       color:#36558f;
       text-transform: uppercase;
+      background-size: calc(100% + 20px) calc(100% + 20px);
+      border-radius: 100px;
       border: 2px solid #36558f;
       transition: 0.8s opacity;
-      padding: 8px;
+      padding: 8px 24px;
   }
   
   .button.contact:hover{
