--- a/css/styles.css
+++ b/css/styles.css
@@ -23,14 +23,14 @@ h1, h2 {
 }
 
 h1 {
-    font-size: 2.75em;
+    font-size: 2.25em;
     font-weight: 700;
     margin: 0;
     padding: 16px;
 }
 
 h2 {
-    font-size: 2.25em;
+    font-size: 2em;
     font-weight: 700;
     margin: 0;
     padding: 16px 0px;
@@ -220,9 +220,10 @@ header {
 }
 
 header .logo {
-    max-width: 24px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    max-width: 128px;
+    max-height: 48px;
+    margin-top: 2px;
+    margin-bottom: 8px;
 }
 
 /*Navigation Styling*/
@@ -354,6 +355,7 @@ nav > ul > li > a > i {
 .hero_text {
     flex: 1 1 auto;
     padding: 16px 0px;
+    text-align: center;
 }
 
 .hero_img {
@@ -374,12 +376,17 @@ nav > ul > li > a > i {
 .project_img {
     flex: 1 1 auto;
     width: 100%;
-    max-width: 400px;
     padding: 24px 16px;
 }
 
 .project_text {
     flex: 1 1 auto;
+    padding: 24px 16px;
+}
+
+.project_vocabimg {
+    flex: 1 1 50%;
+    width: 100%;
     padding: 24px 16px;
 }
 
@@ -481,27 +488,26 @@ p.plutopay_parent{
     text-align: center;
 }
 
-
-
-/*Media Queries*/
-/*clear page flow*/
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-/**float all columns to the left*/
-[class*="col-"] {
-    padding: 16px;
-}
-
+/***********************************************Media Queries*********************************************************/
 /*Medium Devices*/
 @media only screen and (min-width: 768px) {
-
+  
     main {
         padding-top: 72px;
-        font-size: 1em;
+        font-size: 1.25em;
+    }
+
+    h1 {
+        font-size: 2.5em;
+    }
+    
+    h2 {
+        font-size: 2.25em;
+    }
+    
+    h3 {
+        font-size: 1.75em;
+        padding-bottom: 32px;
     }
     
     header {
@@ -510,7 +516,9 @@ p.plutopay_parent{
     }
 
     header .logo{
-        max-width: 38px;
+        max-width: 8em;
+        max-height: 8em;
+        padding-top: 4px;
     }
 
     nav {
@@ -535,13 +543,14 @@ p.plutopay_parent{
     }
 
     .hero_text {
-        flex: 1 1 0;
+        flex: 1 1 50%;
         padding: 0 24px;
+        text-align: left;
     }
     
     .hero_img {
-        flex: 1 1 0;
-        max-width: 256px;
+        flex: 1 1 50%;
+        max-width: 272px;
     }
 
     .project_parent {
@@ -551,13 +560,13 @@ p.plutopay_parent{
 
     .project_img {
         flex: 1 1 0;
-        max-width: max-content;
+        max-width: 486px;
         padding: 48px 16px;
     }
     
     .project_text {
         flex: 1 1 0;
-        padding: 48px 16px;
+        padding: 48px 32px;
     }
 
     .aboutme_parent {
@@ -574,7 +583,7 @@ p.plutopay_parent{
     .aboutme_text {
         flex: 1 1 0;
         max-width: 600px;
-        padding: 16px 32px 24px 16px;
+        padding: 16px 32px 24px 0px;
         height: auto;
     }
 
@@ -629,7 +638,20 @@ p.plutopay_parent{
 
     main {
         padding-top: 72px;
-        font-size: 1em;
+        font-size: 1.25em;
+    }
+
+    h1 {
+        font-size: 2.5em;
+    }
+    
+    h2 {
+        font-size: 2.25em;
+    }
+    
+    h3 {
+        font-size: 1.75em;
+        padding-bottom: 32px;
     }
 
     .hero_parent {
