--- a/css/styles.css
+++ b/css/styles.css
@@ -23,22 +23,22 @@ h1, h2 {
 }
 
 h1 {
-    font-size: 2.25em;
+    font-size: 2.5em;
     font-weight: 700;
     margin: 0;
-    padding: 16px;
+    padding: 16px 0;
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 1.75em;
     font-weight: 700;
     margin: 0;
-    padding: 16px 0px;
+    padding: 8px 0px;
 }
 
 h3 {
     line-height: 1px;
-    font-size: 1.75em;
+    font-size: 1.5em;
     font-weight: 400;
     margin: 0;
     padding: 16px 0px;
@@ -675,7 +675,7 @@ p.plutopay_parent{
     .aboutme_text {
         flex: 1 1 0;
         max-width: 680px;
-        padding: 16px 32px 24px 16px;
+        padding: 16px 32px 24px 0px;
     }
 
 }
